--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
             color: #333;
         }
         header {
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: linear-gradient(135deg, #000428, #004e92);
             color: #fff;
-            padding: 2rem 0;
+            padding: 4rem 2rem;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         header h1 {
             margin: 0;
-            font-size: 3rem;
+            font-size: 4rem;
         }
         header p {
             margin: 0.5rem 0;
-            font-size: 1.3rem;
+            font-size: 1.5rem;
         }
         nav {
             background: #333;
             color: #fff;
             text-align: center;
             padding: 1rem 0;
-            position: sticky;
+            position: static;
             top: 0;
             z-index: 1000;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -61,6 +61,8 @@
             padding: 3rem 2rem;
             max-width: 1000px;
             margin: auto;
+            background: #000428;
+            color: #fff;
             opacity: 0;
             transform: translateY(20px);
             transition: opacity 1s ease-out, transform 1s ease-out;
@@ -77,8 +79,8 @@
             font-size: 2.5rem;
         }
         .shape {
-            background: #fff;
-            color: #333;
+            background: #004e92;
+            color: #fff;
             padding: 1.5rem;
             border-radius: 8px;
             margin: 1.5rem 0;
@@ -182,23 +184,22 @@
 </head>
 <body>
 
-<nav>
-    <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#certificates">Certificates</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
-
 <div class="page active" id="about">
     <header>
         <h1>Valli Viswa Varshini M</h1>
-        <p>B.Tech Student of St. Joseph's College Of Engineering</p>
+        <p>B.Tech Student at St. Joseph's College Of Engineering</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#certificates">Certificates</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 </div>
 
@@ -336,15 +337,13 @@
         <h2>Contact</h2>
         <div class="shape">
             <p>Email: <a href="mailto:valliviswavarshini@gmail.com">valliviswavarshini@gmail.com</a></p>
-            <p>Phone: 6382897656</p>
-            <p>Location: Chennai, India</p>
-            <p><a href="https://www.linkedin.com/in/valli-viswa-varshini-m-0947a7265" target="_blank">LinkedIn</a> | <a href="https://github.com/Valli-Viswa-Varshini" target="_blank">GitHub</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/valliviswavarshini" target="_blank">linkedin.com/in/valliviswavarshini</a></p>
         </div>
     </section>
 </div>
 
 <footer>
-    <p>&copy; 2024 Valli Viswa Varshini M. All Rights Reserved.</p>
+    <p>&copy; 2024 Valli Viswa Varshini M. All rights reserved.</p>
 </footer>
 
 </body>
